--- a/fastposter-cloud-client-core/pom.xml
+++ b/fastposter-cloud-client-core/pom.xml
@@ -2,11 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>cn.fastposter</groupId>
+
     <artifactId>fastposter-cloud-client-core</artifactId>
-    <version>1.1.0</version>
-    <name>fastposter-cloud-client-core</name>
-    <description>fastposter-cloud-client-core</description>
+
+    <parent>
+        <groupId>cn.fastposter</groupId>
+        <artifactId>fastposter-cloud-client</artifactId>
+        <version>1.1.0</version>
+    </parent>
 
     <dependencies>
 
