--- a/fastposter-cloud-client-core/pom.xml
+++ b/fastposter-cloud-client-core/pom.xml
@@ -47,7 +47,7 @@
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.11.0</version>
-            <scope>test</scope>
+<!--            <scope>test</scope>-->
         </dependency>
 
     </dependencies>
