--- a/fastposter-cloud-client-core/pom.xml
+++ b/fastposter-cloud-client-core/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>fastposter-cloud-client-core</artifactId>
 
     <parent>
-        <groupId>cn.fastposter</groupId>
+        <groupId>cn.psoho</groupId>
         <artifactId>fastposter-cloud-client</artifactId>
         <version>1.1.0</version>
     </parent>
