--- a/fastposter-cloud-client-starter-example/pom.xml
+++ b/fastposter-cloud-client-starter-example/pom.xml
@@ -5,12 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>cn.fastposter</groupId>
+        <groupId>cn.psoho</groupId>
         <artifactId>fastposter-cloud-client</artifactId>
         <version>1.1.0</version>
     </parent>
 
-    <groupId>cn.fastposter</groupId>
+    <groupId>cn.psoho</groupId>
     <artifactId>fastposter-cloud-client-starter-example</artifactId>
     <version>1.1.0</version>
 
@@ -32,7 +32,7 @@
         </dependency>
 
         <dependency>
-            <groupId>cn.fastposter</groupId>
+            <groupId>cn.psoho</groupId>
             <artifactId>fastposter-cloud-client-starter</artifactId>
             <version>1.1.0</version>
         </dependency>
