--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,9 @@
     <artifactId>fastposter-cloud-client</artifactId>
     <version>1.1.0</version>
     <name>fastposter-cloud-client</name>
-    <description>fastposter-cloud-client</description>
+    <description>
+        fastposter-cloud-client make poster develop so easy and so happy.
+    </description>
     <packaging>pom</packaging>
 
     <parent>
