--- a/fastposter-cloud-client-core/pom.xml
+++ b/fastposter-cloud-client-core/pom.xml
@@ -6,9 +6,9 @@
     <artifactId>fastposter-cloud-client-core</artifactId>
 
     <parent>
-        <groupId>cn.psoho</groupId>
+        <groupId>cn.fastposter</groupId>
         <artifactId>fastposter-cloud-client</artifactId>
-        <version>1.1.0</version>
+        <version>1.2.0</version>
     </parent>
 
     <dependencies>
