--- a/fastposter-cloud-client-starter-example/pom.xml
+++ b/fastposter-cloud-client-starter-example/pom.xml
@@ -5,14 +5,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>cn.psoho</groupId>
+        <groupId>cn.fastposter</groupId>
         <artifactId>fastposter-cloud-client</artifactId>
-        <version>1.1.0</version>
+        <version>1.2.0</version>
     </parent>
 
-    <groupId>cn.psoho</groupId>
+    <groupId>cn.fastposter</groupId>
     <artifactId>fastposter-cloud-client-starter-example</artifactId>
-    <version>1.1.0</version>
+    <version>1.2.0</version>
 
     <dependencies>
         <dependency>
@@ -32,9 +32,9 @@
         </dependency>
 
         <dependency>
-            <groupId>cn.psoho</groupId>
+            <groupId>cn.fastposter</groupId>
             <artifactId>fastposter-cloud-client-starter</artifactId>
-            <version>1.1.0</version>
+            <version>1.2.0</version>
         </dependency>
     </dependencies>
 
