--- a/fastposter-cloud-client-starter/pom.xml
+++ b/fastposter-cloud-client-starter/pom.xml
@@ -7,9 +7,9 @@
     <artifactId>fastposter-cloud-client-starter</artifactId>
 
     <parent>
-        <groupId>cn.psoho</groupId>
+        <groupId>cn.fastposter</groupId>
         <artifactId>fastposter-cloud-client</artifactId>
-        <version>1.1.0</version>
+        <version>1.2.0</version>
     </parent>
 
     <properties>
@@ -20,9 +20,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>cn.psoho</groupId>
+            <groupId>cn.fastposter</groupId>
             <artifactId>fastposter-cloud-client-core</artifactId>
-            <version>1.1.0</version>
+            <version>1.2.0</version>
         </dependency>
 
         <dependency>
