--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>cn.psoho</groupId>
+    <groupId>cn.fastposter</groupId>
     <artifactId>fastposter-cloud-client</artifactId>
-    <version>1.1.0</version>
+    <version>1.2.0</version>
     <name>fastposter-cloud-client</name>
     <description>
         fastposter-cloud-client make poster develop so easy and so happy.
