--- a/fastposter-cloud-client-core-example/pom.xml
+++ b/fastposter-cloud-client-core-example/pom.xml
@@ -11,30 +11,27 @@
     </parent>
 
     <groupId>cn.fastposter</groupId>
-    <artifactId>fastposter-cloud-client-starter-example</artifactId>
+    <artifactId>fastposter-cloud-client-core-example</artifactId>
     <version>1.2.2</version>
 
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
 
         <dependency>
             <groupId>cn.fastposter</groupId>
-            <artifactId>fastposter-cloud-client-starter</artifactId>
+            <artifactId>fastposter-cloud-client-core</artifactId>
             <version>1.2.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp-tls</artifactId>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
