--- a/fastposter-cloud-client-core/pom.xml
+++ b/fastposter-cloud-client-core/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>cn.fastposter</groupId>
         <artifactId>fastposter-cloud-client</artifactId>
-        <version>1.2.3</version>
+        <version>${revision}</version>
     </parent>
 
     <dependencies>
