--- a/fastposter-cloud-client-starter-example/pom.xml
+++ b/fastposter-cloud-client-starter-example/pom.xml
@@ -7,12 +7,12 @@
     <parent>
         <groupId>cn.fastposter</groupId>
         <artifactId>fastposter-cloud-client</artifactId>
-        <version>1.2.3</version>
+        <version>${revision}</version>
     </parent>
 
     <groupId>cn.fastposter</groupId>
     <artifactId>fastposter-cloud-client-starter-example</artifactId>
-    <version>1.2.3</version>
+    <version>${revision}</version>
 
     <dependencies>
         <dependency>
@@ -34,7 +34,7 @@
         <dependency>
             <groupId>cn.fastposter</groupId>
             <artifactId>fastposter-cloud-client-starter</artifactId>
-            <version>1.2.3</version>
+            <version>${revision}</version>
         </dependency>
 
     </dependencies>
