完善客户端，方便调用 OK

--- a/fastposter-cloud-client-starter-example/src/test/resources/application.yml
+++ b/fastposter-cloud-client-starter-example/src/test/resources/application.yml
@@ -1,4 +1,5 @@
 fastposter-cloud:
-  app-key: demo
-  app-secret: demo
+  app-key: 1f5aa8d75f2d4bc4
+  app-secret: 8a395182a41e41ad9318cea4e1018cdc
   debug: true
+  endpoint: https://api.fastposter.net/
