--- a/fastposter-cloud-client-core/pom.xml
+++ b/fastposter-cloud-client-core/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>fastposter-cloud-client-core</artifactId>
 
     <parent>
-        <groupId>cn.fastposter</groupId>
+        <groupId>net.fastposter</groupId>
         <artifactId>fastposter-cloud-client</artifactId>
         <version>${revision}</version>
     </parent>
