--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>cn.fastposter</groupId>
+    <groupId>net.fastposter</groupId>
     <artifactId>fastposter-cloud-client</artifactId>
     <version>${revision}</version>
     <name>fastposter-cloud-client</name>
@@ -26,7 +26,7 @@
 
 
     <properties>
-        <revision>1.2.5</revision>
+        <revision>1.2.6</revision>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
