--- a/fastposter-cloud-client-core/pom.xml
+++ b/fastposter-cloud-client-core/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>net.fastposter</groupId>
         <artifactId>fastposter-cloud-client</artifactId>
-        <version>${revision}</version>
+        <version>1.2.6</version>
     </parent>
 
     <dependencies>
