--- a/fastposter-cloud-client-starter-example/pom.xml
+++ b/fastposter-cloud-client-starter-example/pom.xml
@@ -6,7 +6,7 @@
 
     <parent>
         <groupId>net.fastposter</groupId>
-        <artifactId>fastposter-cloud-client</artifactId>
+        <artifactId>fastposter-cloud-client-parent</artifactId>
         <version>1.3.1</version>
     </parent>
 
