--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>net.fastposter</groupId>
-    <artifactId>fastposter-cloud-client</artifactId>
+    <artifactId>fastposter-cloud-client-parent</artifactId>
     <version>1.3.1</version>
-    <name>fastposter-cloud-client</name>
+    <name>fastposter-cloud-client-parent</name>
     <description>
         fastposter-cloud-client make poster develop so easy and so happy.
     </description>
@@ -18,8 +18,8 @@
     </parent>
 
     <modules>
-        <module>fastposter-cloud-client-core</module>
-        <module>fastposter-cloud-client-core-example</module>
+        <module>fastposter-cloud-client</module>
+        <module>fastposter-cloud-client-example</module>
         <module>fastposter-cloud-client-starter</module>
         <module>fastposter-cloud-client-starter-example</module>
     </modules>
