--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,7 @@
             <name>Alex小新</name>
             <email>fastposter@163.com</email>
             <organization>Changsha Small Code Network Technology Co., LTD</organization>
-            <organizationUrl>https://cloud.fastposter.net/</organizationUrl>
+            <organizationUrl>https://cloud.fastposter.net/doc/</organizationUrl>
         </developer>
     </developers>
 
