--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
     <licenses>
         <license>
             <name>The MIT License (MIT)</name>
-            <url>http://www.opensource.org/licenses/mit-license.html</url>
+            <url>https://opensource.org/licenses/mit-license.html</url>
             <distribution>repo</distribution>
         </license>
     </licenses>
