--- a/fastposter-client-starter-example/src/test/resources/application.yml
+++ b/fastposter-client-starter-example/src/test/resources/application.yml
@@ -2,3 +2,7 @@
 fastposter:
   app-key: 1f5aa8d75f2d4bc4
   app-secret: 8a395182a41e41ad9318cea4e1018cdc
+  token: ApfrIzxCoK1DwNZOEJCwlrnv6QZ0PCdv
+  trace: true
+  endpoint: http://127.0.0.1:5000
+#  debug: true
