--- a/fastposter-client-starter/pom.xml
+++ b/fastposter-client-starter/pom.xml
@@ -4,13 +4,22 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>fastposter-client-starter</artifactId>
+
 
     <parent>
         <groupId>net.fastposter</groupId>
         <artifactId>fastposter-client-parent</artifactId>
         <version>1.8.0</version>
     </parent>
+
+    <artifactId>fastposter-client-starter</artifactId>
+    <name>fastposter-client-starter</name>
+    <version>1.8.0</version>
+    <packaging>jar</packaging>
+
+    <description>
+        fastposter make poster development easy.
+    </description>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
